--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background:;
+
   position: relative;
   font-weight:400px;
 }
@@ -900,7 +900,6 @@ h2.title {
   transition: height 500ms ease 0s;
   width: 100%;
   display: block;
-  opacity:;
 }
 
 .single-products:hover .product-overlay {
@@ -1700,7 +1699,7 @@ h2.title {
 }
 
 
-#do_action .total_area, {
+#do_action .total_area {
   padding-bottom: 18px !important;
 }
 
